# services/lifthus-auth/docs/swagger.json
@@ -35,6 +35,99 @@
                 }
             }
         },
+        "/relation/follow/{uid}": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "gets uid from path param and makes signed user follow the given user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "signed user now follows the given user"
+                    },
+                    "400": {
+                        "description": "invalid uid"
+                    },
+                    "404": {
+                        "description": "user not found"
+                    },
+                    "500": {
+                        "description": "failed to get user following list"
+                    }
+                }
+            }
+        },
+        "/relation/followers/{uid}": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "gets uid from path param and returns user's follower list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "returns follower list as list of number"
+                    },
+                    "400": {
+                        "description": "invalid uid"
+                    },
+                    "404": {
+                        "description": "user not found"
+                    },
+                    "500": {
+                        "description": "failed to get user follower list"
+                    }
+                }
+            }
+        },
+        "/relation/following/{uid}": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "gets uid from path param and returns user's following list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "returns following list as list of number"
+                    },
+                    "400": {
+                        "description": "invalid uid"
+                    },
+                    "404": {
+                        "description": "user not found"
+                    },
+                    "500": {
+                        "description": "failed to get user following list"
+                    }
+                }
+            }
+        },
         "/session/new": {
             "get": {
                 "description": "case A: no session, return newly generated session token with 201.\ncase B-1: signed but expired, reset session info(used, signed_at, uid) except SID and return new session token with 201.\ncase B-2: not signed and expired, return new session token keeping SID with 201.\ncase C-1: valid and signed, just return with 200.\ncase C-2: valid and not signed, return with 201 to tell client to check Hus session.",
@@ -111,7 +204,7 @@
                         "description": "user not found"
                     },
                     "500": {
-                        "description": "failed to create new session"
+                        "description": "failed to set user info"
                     }
                 }
             },
@@ -172,7 +265,7 @@
                         "description": "user not found"
                     },
                     "500": {
-                        "description": "failed to create new session"
+                        "description": "failed to get user info"
                     }
                 }
             }
@@ -201,7 +294,7 @@
                         "description": "user not found"
                     },
                     "500": {
-                        "description": "failed to create new session"
+                        "description": "failed to get user info"
                     }
                 }
             }
